gcc/testsuite/g++.dg/template/crash31.C
// PR c++/19063

template<operator< struct A {}; // { dg-error "" }
